# gcr

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  README  README.md  autogen.sh  configure.ac  gcr.doap  meson.build  meson_options.txt  meson_post_install.py
docs/: meson.build
docs/gck/: gck.toml.in  meson.build  pkcs11-links.md
docs/gcr/: gcr-base.toml.in  gcr.toml.in  meson.build  non-pageable-memory.md  pkcs11-configuration.md  trust-store.md
docs/gcr-gtk3/: gcr-gtk3.toml.in  meson.build  widget-gallery.md
docs/gcr-gtk4/: gcr-gtk4.toml.in  meson.build  urlmap.js
docs/ui/: gcr-ui.toml.in  meson.build
egg/: Makefile.am  egg-armor.c  egg-armor.h  egg-asn1-defs.c  egg-asn1-defs.h  egg-asn1.c  egg-asn1.h  egg-asn1x.c  egg-asn1x.h  egg-buffer.c  egg-buffer.h  egg-bytes.c  egg-bytes.h  egg-crypto-gnutls.c  egg-crypto-libgcrypt.c  egg-crypto.h  egg-decimal.c  egg-decimal.h  egg-dh-gnutls.c  egg-dh-libgcrypt.c  egg-dh.c  egg-dh.h  egg-dn.c  egg-dn.h  egg-error.h  egg-fips-gnutls.c  egg-fips-libgcrypt.c  egg-fips.h  egg-hex.c  egg-hex.h  egg-hkdf-gnutls.c  egg-hkdf-libgcrypt.c  egg-hkdf.c  egg-hkdf.h  egg-libgcrypt.c  egg-libgcrypt.h  egg-oid.c  egg-oid.h  egg-openssl.c  egg-openssl.h  (+29 more)
egg/fixtures/: test-personalname-1.der
egg/tests/: Makefile.am  test-asn1.c  test-asn1x.c  test-decimal.c  test-dn.c  test-hkdf.c  test-oid.c  test-openssl.c  test-padding.c  test-secmem.c  test-symkey.c  unit-test-asn1.c  unit-test-dh.c  unit-test-hex.c  unit-test-oid.c  unit-test-openssl.c  unit-test-secmem.c  unit-test-symkey.c
gck/: Gck-1.metadata  Gck-2.metadata  Makefile.am  gck-attributes.c  gck-attributes.h  gck-call.c  gck-debug.c  gck-deprecated.h  gck-dump.c  gck-enumerator.c  gck-enumerator.h  gck-interaction.c  gck-misc.c  gck-mock.c  gck-mock.h  gck-module.c  gck-module.h  gck-modules.c  gck-object-attributes.c  gck-object-cache.c  gck-object-cache.h  gck-object.c  gck-object.h  gck-password.c  gck-password.h  gck-private.h  gck-session.c  gck-session.h  gck-slot.c  gck-slot.h  gck-test.c  gck-test.h  gck-uri.c  gck-uri.h  gck-version.h.in  gck.h  gck.pc.in  gck.symbols  libgck.map  meson.build  (+14 more)
gck/tests/: Makefile.am  test-gck-attributes.c  test-gck-crypto.c  test-gck-enumerator.c  test-gck-module.c  test-gck-modules.c  test-gck-object.c  test-gck-session.c  test-gck-slot.c  test-gck-uri.c
gcr/: Gcr-3.metadata  Gcr-4.metadata  Makefile.am  console-interaction.c  console-interaction.h  frob-certificate-request.c  frob-openpgp.c  frob-parser.c  gcr-base.h  gcr-base.pc.in  gcr-base.symbols  gcr-callback-output-stream.c  gcr-callback-output-stream.h  gcr-certificate-basics-widget.c  gcr-certificate-basics-widget.h  gcr-certificate-chain.c  gcr-certificate-chain.h  gcr-certificate-details-widget.c  gcr-certificate-details-widget.h  gcr-certificate-extension-authority-info-access.c  gcr-certificate-extension-authority-key-identifier.c  gcr-certificate-extension-basic-constraints.c  gcr-certificate-extension-certificate-policies.c  gcr-certificate-extension-crl-distribution-points.c  gcr-certificate-extension-extended-key-usage.c  gcr-certificate-extension-key-usage.c  gcr-certificate-extension-list-private.h  gcr-certificate-extension-list.c  gcr-certificate-extension-list.h  gcr-certificate-extension-private.h  gcr-certificate-extension-subject-alt-name.c  gcr-certificate-extension-subject-key-identifier.c  gcr-certificate-extension.c  gcr-certificate-extension.h  gcr-certificate-extensions-common.c  gcr-certificate-extensions-private.h  gcr-certificate-extensions.c  gcr-certificate-extensions.h  gcr-certificate-field-private.h  gcr-certificate-field.c  (+202 more)
gcr-gtk3/: GcrGtk3-3.metadata  eggimagemenuitem.c  eggimagemenuitem.h  frob-certificate.c  frob-combo-selector.c  frob-gnupg-selector.c  frob-import-button.c  frob-key.c  frob-prompt.c  frob-request.c  frob-tree-selector.c  frob-unlock-options.c  frob-unlock.c  gcr-certificate-basics-widget.h  gcr-certificate-exporter.c  gcr-certificate-exporter.h  gcr-certificate-renderer.c  gcr-certificate-renderer.h  gcr-certificate-request-renderer.c  gcr-certificate-widget.c  gcr-certificate-widget.h  gcr-collection-model.c  gcr-collection-model.h  gcr-combo-selector.h  gcr-crypto-types.xml  gcr-deprecated.h  gcr-display-scrolled.h  gcr-failure-renderer.c  gcr-gtk3.h  gcr-gtk3.symbols  gcr-import-button.c  gcr-key-renderer.h  gcr-key-widget.c  gcr-key-widget.h  gcr-live-search.c  gcr-pkcs11-import-dialog.c  gcr-pkcs11-import-interaction.c  gcr-prompt-dialog.c  gcr-prompter-tool.c  gcr-renderer.c  (+14 more)
gcr-gtk3/icons/: meson.build  render-icons.py
gcr-gtk4/: gcr-certificate-widget.c  gcr-certificate-widget.h  gcr-gtk4.h  gcr-renderer.c  gcr-renderer.h  gcr-section.c  gcr-section.h  meson.build
gcr-gtk4/viewer/: meson.build  viewer.c
gcr/fixtures/: 34.10-01.crt  base64-rsa-2048.spkac  cert-ecc521.pub  client.spk  der-ec-256.key  ecc-strong.crt  (+10 more)
schema/: Makefile.am  meson.build  org.gnome.crypto.pgp.gschema.xml
tools/: frob-unlock.c  gcr-prompter.desktop.in.in  gcr-viewer-window.c  gcr-viewer-window.h  meson.build
ui/: Makefile.am  eggimagemenuitem.c  eggimagemenuitem.h  frob-certificate.c  frob-combo-selector.c  frob-import-button.c  frob-key.c  frob-prompt.c  frob-request.c  frob-system-prompt.c  frob-tree-selector.c  frob-unlock-options.c  frob-unlock.c  gcr-certificate-basics-widget.c  gcr-certificate-basics-widget.h  gcr-certificate-details-widget.c  gcr-certificate-details-widget.h  gcr-certificate-exporter.c  gcr-certificate-exporter.h  gcr-certificate-renderer-private.h  gcr-certificate-renderer.c  gcr-certificate-renderer.h  gcr-certificate-request-renderer.c  gcr-certificate-request-renderer.h  gcr-certificate-widget.c  gcr-certificate-widget.h  gcr-collection-model.c  gcr-collection-model.h  gcr-combo-selector.c  gcr-combo-selector.h  gcr-crypto-types.xml  gcr-deprecated.h  gcr-dialog-util.c  gcr-dialog-util.h  gcr-display-scrolled.c  gcr-display-scrolled.h  gcr-display-view.c  gcr-display-view.h  gcr-failure-renderer.c  gcr-failure-renderer.h  (+47 more)
(+216 files in other folders)
