option('introspection',
  type: 'boolean',
  value: true,
  description: 'Build GObject Introspection (GIR) files',
)
option('gtk',
  type: 'boolean',
  value: true,
  description: 'Build code that uses GTK+',
)
option('gtk_doc',
  type: 'boolean',
  value: true,
  description: 'Build the reference documentation (requires gtk-doc)',
)
option('gpg_path',
  type: 'string',
  value: '',
  description: 'Path to gpg, autodetected if not set',
)
option('ssh_agent',
  type: 'boolean',
  value: true,
  description: 'Build ssh-agent binary',
)
option('systemd',
  type: 'feature',
  value: 'auto',
  description: 'Use systemd socket activation for server programs'
)
